test_regress/t/t_preproc_eof5_bad.out
%Error: t/t_preproc_eof5_bad.v:7:1: EOF in (*
    7 | (* attr
      | ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
